--- a/package.json
+++ b/package.json
@@ -8,13 +8,17 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@expo/metro-config": "^0.1.54",
+    "@react-native-async-storage/async-storage": "^1.13.4",
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/bottom-tabs": "^5.11.7",
     "@react-navigation/drawer": "^5.12.3",
     "@react-navigation/native": "^5.9.2",
     "@react-navigation/stack": "^5.14.2",
     "expo": "~40.0.0",
+    "expo-asset": "~8.2.1",
     "expo-constants": "~9.3.3",
+    "expo-file-system": "~9.3.0",
     "expo-sqlite": "~8.5.0",
     "expo-status-bar": "~1.0.3",
     "react": "16.13.1",
